# obadh

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  clippy.toml  init-project.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/core/bengali/: Cargo.toml
crates/core/bengali/src/: lib.rs
crates/core/bengali/src/types/: mod.rs
crates/core/engine/: Cargo.toml
crates/core/engine/src/: lib.rs
crates/core/engine/src/error/: mod.rs
crates/core/engine/src/processor/: mod.rs
crates/core/engine/src/types/: mod.rs
crates/core/utils/: Cargo.toml
crates/core/utils/src/: lib.rs
crates/protocols/config/: Cargo.toml
crates/protocols/config/src/: lib.rs
crates/protocols/ime/: Cargo.toml
crates/protocols/ime/src/: lib.rs
crates/tools/cli/: Cargo.toml
crates/tools/cli/src/: main.rs
include/: Transliterator.h
src/: Transliterator.cpp  main.cpp
