[package]
name = "obadh-ime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Part of the Obadh Bengali Input Method Engine"

[dependencies]
log.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
test-case.workspace = true
pretty_assertions.workspace = true
criterion.workspace = true
